--- a/views/ask-question.ejs
+++ b/views/ask-question.ejs
@@ -77,10 +77,11 @@
                 <div class="user-setting">
                     
                     <ul class="log-out">
-                        <li><a href="#" title=""><i class="ti-user"></i> view profile</a></li>
-                        <li><a href="#" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
-                        
-                        <li><a href="#" title=""><i class="ti-power-off"></i>log out</a></li>
+                        <li><a href="/user/viewprofile/<%= User._id %>" title=""><i class="ti-user"></i> view profile</a></li>
+			<% if(login_id==User_id){ %>
+                        <li><a href="/user/editprofile/<%=User_id%>" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
+                        <% } %>
+                        <li><a href="/user/logout" title=""><i class="ti-power-off"></i>log out</a></li>
                     </ul>
                 </div>
             </div>
@@ -92,20 +93,11 @@
                 <ul class="left-menu">
             
                     <li>
-                        <a href="C:\Users\stack\Desktop\Your Sawaal\questions\questions.html" title="Questions" data-toggle="tooltip" data-placement="right">
+                        <a href="/" title="Questions" data-toggle="tooltip" data-placement="right">
                             <i class="ti-magnet"></i>
                         </a>
                     </li>
-                    <li>
-                        <a href="C:\Users\stack\Desktop\Your Sawaal\groups\timeline.html" title="Groups" data-toggle="tooltip" data-placement="right">
-                            <i class="fa fa-users"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="C:\Users\stack\Desktop\Your Sawaal\questions\question-details.html" title="Answer" data-toggle="tooltip" data-placement="right">
-                            <i class="fa fa-forumbee"></i>
-                        </a>
-                    </li>
+                    
                 
                 
                 </ul>
@@ -144,7 +136,7 @@
                             <label class="fs-14 text-black fw-medium mb-0">Question Title</label>
                             <p class="fs-13 pb-3 lh-20">Be specific and imagine you’re asking a question to another person</p>
                             <div class="form-group">
-                                <input class="form-control form--control" type="text" name="title" placeholder="e.g. Is there an R function for finding the index of an element in a vector?">
+                                <input class="form-control form--control" type="text" name="title" placeholder="Write your Question!">
                             </div>
                         </div><!-- end input-box -->
                         <div class="input-box">
@@ -153,17 +145,7 @@
                                     <label class="fs-14 text-black fw-medium mb-0">Tags</label>
                                     <p class="fs-13 pb-3 lh-20">Add up to 5 tags to describe what your question is about:</p>
                                 </div>
-                                <button type="button" class="popover-trigger btn border border-gray py-1 lh-18 px-2" data-container="body" data-toggle="popover" data-placement="top">
-                                    <svg aria-hidden="true" class="svg-icon-color-gray" width="14" height="14"><path d="M7 1a6 6 0 100 12A6 6 0 007 1zm1.06 9.06c-.02.63-.48 1.02-1.1 1-.57-.02-1.03-.43-1.01-1.06.02-.63.5-1.04 1.08-1.02.6.02 1.05.45 1.03 1.08zm.73-3.07l-.47.3c-.2.15-.36.36-.44.6a3.6 3.6 0 00-.08.65c0 .04-.03.14-.16.14h-1.4c-.14 0-.16-.09-.16-.13-.01-.5.11-.99.36-1.42A4.6 4.6 0 017.7 6.07c.15-.1.21-.21.3-.33a1.14 1.14 0 00.02-1.48c-.22-.26-.46-.4-.92-.4-.45 0-.83.23-1.02.52-.19.3-.16.63-.16.94H4.2c0-1.17.31-1.92.98-2.36a3.5 3.5 0 011.83-.44c.88 0 1.58.16 2.2.62.58.42.88 1.02.88 1.82 0 .5-.17.9-.43 1.24-.15.2-.44.47-.86.79h-.01z"></path></svg>
-                                </button>
-                                <div class="generic-popover d-none">
-                                    <h4 class="fs-16 pb-1">How to tag</h4>
-                                    <p class="pb-2 fs-14">Tags help the right people find and answer your question.</p>
-                                    <ul class="generic-list-item generic-list-item-bullet">
-                                        <li class="lh-18 text-black-50">Identify your tags by completing the sentence, "My question is about…"</li>
-                                           </ul>
-                                  
-                                </div><!-- end generic-popover -->
+                                
                             </div>
                             <div class="form-group">
                                 <input class="input-tags input--tags" type="text" name="tags" placeholder="e.g. bollywood">
@@ -171,9 +153,9 @@
                         </div><!-- end input-box -->
                         <div class="input-box">
                             <label class="fs-14 text-black fw-medium mb-0">Category</label>
-                            <p class="fs-13 pb-3 lh-20">Please choose the appropriate section so the question can be searched easily.</p>
+                            <p class="fs-13 pb-3 lh-20">Please choose the category so the question can be searched easily.</p>
                             <div class="form-group">
-                                <select  name="cateogaries" >
+                                <select name="cateogaries" >
                                    
                                     <option value="Analytics">Analytics</option>
                                     <option value="Communication">Communication</option>
@@ -204,11 +186,11 @@
                             <div class="form-group">
                                 <div class="custom-control custom-checkbox fs-13 mb-1">
                                     <input type="checkbox" class="custom-control-input" id="notifiedMe">
-                                    <label class="custom-control-label custom--control-label" for="notifiedMe">Get notified by email when someone answers this question.</label>
+                                    <label class="custom-control-label custom--control-label" for="notifiedMe">Get notified when someone answers this question.</label>
                                 </div>
                                 <div class="custom-control custom-checkbox fs-13">
                                     <input type="checkbox" class="custom-control-input" id="youAgreeCheckBox" required name="agree_privacy">
-                                    <label class="custom-control-label custom--control-label" for="youAgreeCheckBox">By asking your question, you agree to the <a href="privacy-policy.html" class="text-color hover-underline">Privacy Policy.</a></label>
+                                    <label class="custom-control-label custom--control-label" for="youAgreeCheckBox">By asking your question, you agree to the <a href="#" class="text-color hover-underline">Privacy Policy.</a></label>
                                 </div>
                             </div>
                             <div class="btn-box">
