--- a/views/ask-question.ejs
+++ b/views/ask-question.ejs
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<title>Your Sawal :: Group</title>
+		<title>Your Sawal :: Ask Question</title>
 		<link rel="icon" href="/app/images/logo.jpg" type="image/png" sizes="16x16"> 
 		
         <link rel="stylesheet" href="/app/css/main.min.css">
