--- a/views/groups-timeline.ejs
+++ b/views/groups-timeline.ejs
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
-	<title>Your Sawal :: Group</title>
+	<title>Your Sawal :: Group | Timeline</title>
 	<link rel="icon" href="/images/logo.jpg" type="image/png" sizes="16x16">
 
 	<link rel="stylesheet" href="/css/main.min.css">
@@ -182,7 +182,7 @@
 				</div>
 				<div class="page-name">
 					<span>
-						<%= groupPost %>
+						<%=grp.groups_name%>
 					</span>
 				</div>
 				<ul class="setting-area">
@@ -200,7 +200,7 @@
 					<div class="user-setting">
 
 						<ul class="log-out">
-							<li><a href="view-profile.html" title=""><i class="ti-user"></i> view profile</a></li>
+							<li><a href=""/user/viewprofile/<%=User._id%>"" title=""><i class="ti-user"></i> view profile</a></li>
 							<li><a href="edit-profile.html" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
 
 							<li><a href="/user/logout" title=""><i class="ti-power-off"></i>log out</a></li>
@@ -218,23 +218,12 @@
 			<div class="menu-left">
 				<ul class="left-menu">
 					<li>
-						<a href="C:\Users\stack\Desktop\Your Sawaal\questions\questions.html" title="Questions"
+						<a href="/" title="Questions"
 							data-toggle="tooltip" data-placement="right">
 							<i class="ti-magnet"></i>
 						</a>
 					</li>
-					<li>
-						<a href="C:\Users\stack\Desktop\Your Sawaal\groups\timeline.html" title="Groups"
-							data-toggle="tooltip" data-placement="right">
-							<i class="fa fa-users"></i>
-						</a>
-					</li>
-					<li>
-						<a href="C:\Users\stack\Desktop\Your Sawaal\questions\question-details.html" title="Answer"
-							data-toggle="tooltip" data-placement="right">
-							<i class="fa fa-forumbee"></i>
-						</a>
-					</li>
+					
 
 
 
@@ -284,7 +273,7 @@
 
 													<div class="author-content">
 														<a class="h4 author-name" href="#"><%=grp.groups_name%></a>
-														<div class="country">Sports</div>
+														
 													</div>
 												</div>
 											</div>
