--- a/views/question-details.ejs
+++ b/views/question-details.ejs
@@ -75,11 +75,12 @@
                
                 <div class="user-setting">
                     
-                    <ul class="log-out">
-                        <li><a href="#" title=""><i class="ti-user"></i> view profile</a></li>
-                        <li><a href="#" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
-                        
-                        <li><a href="#" title=""><i class="ti-power-off"></i>log out</a></li>
+                     <ul class="log-out">
+                        <li><a href="/user/viewprofile/<%= User._id %>" title=""><i class="ti-user"></i> view profile</a></li>
+			<% if(login_id==User_id){ %>
+                        <li><a href="/user/editprofile/<%=User_id%>" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
+                        <% } %>
+                        <li><a href="/user/logout" title=""><i class="ti-power-off"></i>log out</a></li>
                     </ul>
                 </div>
             </div>
@@ -92,20 +93,11 @@
             
                    
                     <li>
-                        <a href="C:\Users\stack\Desktop\Your Sawaal\questions\questions.html" title="Questions" data-toggle="tooltip" data-placement="right">
+                        <a href="/" title="Questions" data-toggle="tooltip" data-placement="right">
                             <i class="ti-magnet"></i>
                         </a>
                     </li>
-                    <li>
-                        <a href="C:\Users\stack\Desktop\Your Sawaal\groups\timeline.html" title="Groups" data-toggle="tooltip" data-placement="right">
-                            <i class="fa fa-users"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="C:\Users\stack\Desktop\Your Sawaal\questions\question-details.html" title="Answer" data-toggle="tooltip" data-placement="right">
-                            <i class="fa fa-forumbee"></i>
-                        </a>
-                    </li>
+                    
             
                 
                 
@@ -149,8 +141,7 @@
                                 </div>
                                 <div class="tags">
                                     <a href="#" class="tag-link"><%= Question.tags %></a>
-                                    <!-- <a href="#" class="tag-link">india</a>
-                                    <a href="#" class="tag-link">law</a> -->
+                                    
                                 </div>
                             </div>
                         </div><!-- end media -->
