--- a/views/search-result.ejs
+++ b/views/search-result.ejs
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<title>Your Sawaal :: Search</title>
+		<title>Your Sawaal :: Search Result</title>
 		<link rel="icon" href="images/logo.jpg" type="image/png" sizes="16x16"> 
 		
 		<link rel="stylesheet" href="css/main.min.css">
@@ -158,7 +158,7 @@ input[type="checkbox"]{
 					</form>
 				</div>
 				<div class="page-name">
-					<span> Timeline</span>
+					<span> Search Result</span>
 				 </div>
 				<ul class="setting-area">
 					
@@ -169,17 +169,18 @@ input[type="checkbox"]{
 					
 				</ul>
 				<div class="user-img">
-					<h5>Sailendra Damaraju</h5>
+					<h5><%=User.name%></h5>
 					<img src="images/resources/company1.png" alt="">
 					
 					<div class="user-setting">
 						
 						<ul class="log-out">
-							<li><a href="view-profile.html" title=""><i class="ti-user"></i> view profile</a></li>
-							<li><a href="edit-profile.html" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
-							
-							<li><a href="#" title=""><i class="ti-power-off"></i>log out</a></li>
-						</ul>
+                        <li><a href="/user/viewprofile/<%= User._id %>" title=""><i class="ti-user"></i> view profile</a></li>
+			<% if(login_id==User_id){ %>
+                        <li><a href="/user/editprofile/<%=User_id%>" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
+                        <% } %>
+                        <li><a href="/user/logout" title=""><i class="ti-power-off"></i>log out</a></li>
+                    </ul>
 					</div>
 				</div>
 				</div>
@@ -193,20 +194,11 @@ input[type="checkbox"]{
 			<div class="menu-left">
 				<ul class="left-menu">
 					<li>
-						<a href="C:\Users\stack\Desktop\Your Sawaal\questions\questions.html" title="Questions" data-toggle="tooltip" data-placement="right">
+						<a href="/" title="Questions" data-toggle="tooltip" data-placement="right">
 							<i class="ti-magnet"></i>
 						</a>
 					</li>
-					<li>
-						<a href="C:\Users\stack\Desktop\Your Sawaal\groups\timeline.html" title="Groups" data-toggle="tooltip" data-placement="right">
-							<i class="fa fa-users"></i>
-						</a>
-					</li>
-					<li>
-						<a href="C:\Users\stack\Desktop\Your Sawaal\questions\question-details.html" title="Answer" data-toggle="tooltip" data-placement="right">
-							<i class="fa fa-forumbee"></i>
-						</a>
-					</li>
+					
 					
 					
 					
@@ -223,7 +215,7 @@ input[type="checkbox"]{
 						<div class="row merged20" id="page-contents">
 							<div class="col-lg-12">
 								<div class="search-meta">
-									<span>Your search result for " <i>{<%=keyword%>}</i> " 30</span>
+									<span>Your search result for " <i>{<%=keyword%>}</i> "</span>
 								</div>
 							</div>
 							<div class="col-lg-3">
@@ -314,17 +306,14 @@ input[type="checkbox"]{
 								<div class="search-tab">
 									<ul class="nav nav-tabs tab-btn">
 		                                 <li class="nav-item"><a class="active" href="#All" data-toggle="tab">All</a></li>
-		                                 <li class="nav-item"><a class="" href="#people" data-toggle="tab">People</a></li>
-		                                 <li class="nav-item"><a class="" href="#questions" data-toggle="tab">Questions</a></li>
-		                                 <li class="nav-item"><a class="" href="#posts" data-toggle="tab">Posts</a></li>
-		                                 <li class="nav-item"><a class="" href="#groups" data-toggle="tab">Groups</a></li>
+		                                 
 		                            </ul>
 
 									<!-- Tab panes -->
 									<div class="tab-content">
 									  	<div class="tab-pane active fade show " id="All" >
 									  		<div class="central-meta item">
-									  			<span class="create-post">Questions<a title="" href="/">See All</a></span>
+									  			<span class="create-post">Questions <a href="/">See All</a></span>
 												<div class="user-post">
 													<div class="friend-info">
 														<figure>
@@ -491,7 +480,7 @@ input[type="checkbox"]{
 											</div>
 											
 											<!-- <div class="central-meta item">
-												<span class="create-post">People<a title="" href="#">See All</a></span>
+												<span class="create-post">Users<a title="" href="#">See All</a></span>
 												<% users.forEach(function(user){ %>
 												<div class="pit-friends">
 													<figure><a href="#" title=""><img src="images/resources/searching1.jpg" alt=""></a></figure>
@@ -710,14 +699,7 @@ input[type="checkbox"]{
 											</div><!-- searched groups -->
 									    </div>
 									</div>
-									<div class="central-meta item">
-										<span class="create-post">Related Searches</span>
-										<ul class="related-searches">
-											<li><a href="#" title="">#GlobalMarkets</a></li>
-											<li><a href="#" title="">#Agnipath</a></li>
-											
-										</ul>
-									</div><!-- Related Searches -->
+									
 								</div>	
 							</div>
 							
