--- a/views/user-groups.ejs
+++ b/views/user-groups.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-	<title>Your Sawaal :: Groups</title>
+	<title>Your Sawaal :: Your Groups</title>
     <link rel="icon" href="images/logo.jpg" type="image/png" sizes="16x16"> 
     
     <link rel="stylesheet" href="/css/main.min.css">
@@ -84,21 +84,11 @@
 				
 				
 				<li>
-					<a href="C:\Users\stack\Desktop\Your Sawaal\questions\questions.html" title="Questions" data-toggle="tooltip" data-placement="right">
+					<a href="/" title="Questions" data-toggle="tooltip" data-placement="right">
 						<i class="ti-magnet"></i>
 					</a>
 				</li>
-				<li>
-					<a href="C:\Users\stack\Desktop\Your Sawaal\groups\timeline.html" title="Groups" data-toggle="tooltip" data-placement="right">
-						<i class="fa fa-users"></i>
-					</a>
-				</li>
-				<li>
-					<a href="C:\Users\stack\Desktop\Your Sawaal\questions\question-details.html" title="Answer" data-toggle="tooltip" data-placement="right">
-						<i class="fa fa-forumbee"></i>
-					</a>
-				</li>
-			
+				
 				
 				
 				
@@ -127,9 +117,10 @@
 										<form action="/user/followuser/<%=User._id%>" method="post">
 											<button value="<%=User._id%>" type="submit" name="follower_id">Follow</button>
 											</form>
-										<!-- <li><a href="#" title="Follow" data-toggle="tooltip"><i class="fa fa-user-plus"></i></a></li> -->
-										<!-- <li><a href="#" title="UnFollow" data-toggle="tooltip"><i class="fa fa-star"></i></a></li> -->
-										
+										<form action="/user/followuser/<%=User._id%>" method="post">
+											<li><button value="<%=User._id%>" type="submit" name="follower_id">Follow</button></li>
+											
+											</form>
 									</ul>
 									
 								</figure>
@@ -188,7 +179,7 @@
 										<div class="row">
 											<div class="col-lg-6">
 												<div class="align-left">
-													<h5>Groups <span>10</span></h5>
+													<h5>Groups <span></span></h5>
 												</div>
 											</div>
 											<div class="col-lg-6">
@@ -264,8 +255,8 @@
 										
 									</div>
 									<div class="lodmore">
-										<span>Viewing 1-5 of 10 Groups</span>
-										<button class="btn-view btn-load-more"></button>
+									
+										
 									</div>
 								</div>
 								
