--- a/views/user-timeline.ejs
+++ b/views/user-timeline.ejs
@@ -181,7 +181,7 @@
 					</form>
 				</div>
 				<div class="page-name">
-					<span> Timeline</span>
+					<span>Timeline</span>
 				 </div>
 				<ul class="setting-area">
 					
@@ -217,20 +217,29 @@
 			<div class="menu-left">
 				<ul class="left-menu">
 					<li>
-						<a href="C:\Users\stack\Desktop\Your Sawaal\questions\questions.html" title="Questions" data-toggle="tooltip" data-placement="right">
+						<a href="/" title="Questions" data-toggle="tooltip" data-placement="right">
 							<i class="ti-magnet"></i>
 						</a>
 					</li>
+											
+					<% if(login_id==User_id){ %>
 					<li>
-						<a href="C:\Users\stack\Desktop\Your Sawaal\groups\timeline.html" title="Groups" data-toggle="tooltip" data-placement="right">
-							<i class="fa fa-users"></i>
+						<a class="" title="Notifications" data-toggle="tooltip" data-placement="right" href="/user/notifications/<%=User._id%>">Notifications
+						<i class="ti-bell"></i>
 						</a>
 					</li>
 					<li>
-						<a href="C:\Users\stack\Desktop\Your Sawaal\questions\question-details.html" title="Answer" data-toggle="tooltip" data-placement="right">
-							<i class="fa fa-forumbee"></i>
+						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor">Be a Mentor
+						<i class="ti-user"></i>
 						</a>
 					</li>
+					<li>
+						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee">Find Mentor
+						<i class="ti-user"></i>
+						</a>
+					</li>
+					<% } %>
+					
 					
 					
 					
@@ -256,7 +265,7 @@
 									<img src="/images/resources/profile-image.jpg" alt="">
 									<ul class="profile-controls">
 										<form action="/user/followuser/<%=User._id%>" method="post">
-										<li><button value="<%=User._id%>" type="submit" name="follower_id">Follow/Unfollow</button></li>
+										<li><button value="<%=User._id%>" type="submit" name="follower_id">Follow</button></li>
 										
 									    </form>
 									</ul>
@@ -286,14 +295,7 @@
 										<div class="col-lg-10 col-md-9">
 											<ul class="profile-menu">
 												
-                                                <% if(login_id==User_id){ %>
-												<li>
-													<a class="active" href="/user/mentor">Be a Mentor</a>
-												</li>
-												<li>
-													<a class="active" href="/user/mentee">Find Mentor</a>
-												</li>
-												<% } %>
+                                               
 												
 												<li>
 													<a class="active" href="/userpost/timeline/<%=User._id%>">Timeline</a>
@@ -307,11 +309,7 @@
 												<li>
 													<a class="" href="/groups/grouphome/<%=User._id%>">Groups</a>
 												</li>
-                                                <% if(login_id==User_id){ %>
-												<li>
-													<a class="" href="/user/notifications/<%=User._id%>">Notifications</a>
-												</li>
-												<% } %>
+                                               
 												
 											</ul>
 											<ol class="folw-detail">
@@ -323,24 +321,7 @@
 									</div>
 								</div>	
 							</div>
-							<div class="col-lg-3">
-								<aside class="sidebar static left">
-									<div class="widget pitnik-links stick-widget">
-										<ul>
-											<li><a href="#" title="">#cricket</a></li>
-											<li><a href="#" title="">#questions</a></li>
-											<li><a href="#" title="">#discussions</a></li>
-											<li><a href="#" title="">#icc</a></li>
-											<li><a href="#" title="">#IPL</a></li>
-											<li><a href="#" title="">#India</a></li>
-											<li><a href="#" title="">#BCCI</a></li>
-											<li><a href="#" title="">#Australia</a></li>
-											<li><a href="#" title="">#England</a></li>
-										</ul>
-										
-									</div><!-- little links -->
-								</aside>
-							</div><!-- sidebar -->
+							
                               
 							
 
@@ -421,16 +402,10 @@
 													</figure>
 													<div class="friend-name">
 														<div class="more">
-															<!-- <div class="more-post-optns"><i class="ti-more-alt"></i>
-																<ul>
-																	<li><i class="fa fa-pencil-square-o"></i>Edit Post</li>
-																	<li><i class="fa fa-trash-o"></i>Delete Post</li>
-																	<li class="bad-report"><i class="fa fa-flag"></i>Report Post</li>
-																	</ul>
-															</div> -->
+															
 														</div>
 														<ins><a href="<%=Ad.add_link%>" title=""><%=Ad.business_name%></a></ins>
-														<span>sponsored <i class="fa fa-globe"></i></span>
+														<span>Sponsored <i class="fa fa-globe"></i></span>
 														
 													</div>
 													<div class="post-meta">
