--- a/views/view-profile.ejs
+++ b/views/view-profile.ejs
@@ -76,10 +76,28 @@
 			<ul class="left-menu">
 				
 				<li>
-					<a href="/" title="Questions" data-toggle="tooltip" data-placement="right">
-						<i class="ti-magnet"></i>
-					</a>
-				</li>
+						<a href="/" title="Questions" data-toggle="tooltip" data-placement="right">
+							<i class="ti-magnet"></i>
+						</a>
+					</li>
+											
+					<% if(login_id==User_id){ %>
+					<li>
+						<a class="" title="Notifications" data-toggle="tooltip" data-placement="right" href="/user/notifications/<%=User._id%>">Notifications
+						<i class="ti-bell"></i>
+						</a>
+					</li>
+					<li>
+						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor">Be a Mentor
+						<i class="ti-user"></i>
+						</a>
+					</li>
+					<li>
+						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee">Find Mentor
+						<i class="ti-user"></i>
+						</a>
+					</li>
+					<% } %>
 				
 				
 				
@@ -242,7 +260,7 @@
 													<li><a class="facebook" href="#" title=""><i class="fa fa-facebook"></i></a></li>
 													<li><a class="twitter" href="#" title=""><i class="fa fa-twitter"></i></a></li>
 													<li><a class="google" href="#" title=""><i class="fa fa-google-plus"></i></a></li>
-													<li><a class="vk" href="#" title=""><i class="fa fa-youtube"></i></a></li>
+													
 													<li><a class="instagram" href="#" title=""><i class="fa fa-instagram"></i></a></li>
 													
 												</ul>
