--- a/views/question-details.ejs
+++ b/views/question-details.ejs
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<title>Your Sawal :: Group</title>
+		<title>Your Sawaal</title>
 		<link rel="icon" href="app/images/logo.jpg" type="image/png" sizes="16x16"> 
 		
         <link rel="stylesheet" href="/app/css/main.min.css">
@@ -93,10 +93,28 @@
             
                    
                     <li>
-                        <a href="/" title="Questions" data-toggle="tooltip" data-placement="right">
-                            <i class="ti-magnet"></i>
-                        </a>
-                    </li>
+						<a href="/" title="Questions" data-toggle="tooltip" data-placement="right">
+							<i class="ti-magnet"></i>
+						</a>
+					</li>
+											
+					<% if(login_id==User_id){ %>
+					<li>
+						<a class="" title="Notifications" data-toggle="tooltip" data-placement="right" href="/user/notifications/<%=User._id%>">Notifications
+						<i class="ti-bell"></i>
+						</a>
+					</li>
+					<li>
+						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor">Be a Mentor
+						<i class="ti-user"></i>
+						</a>
+					</li>
+					<li>
+						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee">Find Mentor
+						<i class="ti-user"></i>
+						</a>
+					</li>
+					<% } %>
                     
             
                 
