--- a/views/notifications.ejs
+++ b/views/notifications.ejs
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<title>Your Sawal :: Timeline</title>
+		<title>Your Sawal :: Notifications</title>
 		<link rel="icon" href="images/logo.jpg" type="image/png" sizes="16x16"> 
 		
 		<link rel="stylesheet" href="/css/main.min.css">
@@ -192,21 +192,28 @@ input[type="checkbox"]{
 			<div class="menu-left">
 				<ul class="left-menu">
 					<li>
-						<a href="C:\Users\stack\Desktop\Your Sawaal\questions\questions.html" title="Questions" data-toggle="tooltip" data-placement="right">
+						<a href="/" title="Questions" data-toggle="tooltip" data-placement="right">
 							<i class="ti-magnet"></i>
 						</a>
 					</li>
+											
+					<% if(login_id==User_id){ %>
 					<li>
-						<a href="C:\Users\stack\Desktop\Your Sawaal\groups\timeline.html" title="Groups" data-toggle="tooltip" data-placement="right">
-							<i class="fa fa-users"></i>
+						<a class="" title="Notifications" data-toggle="tooltip" data-placement="right" href="/user/notifications/<%=User._id%>">Notifications
+						<i class="ti-bell"></i>
 						</a>
 					</li>
 					<li>
-						<a href="C:\Users\stack\Desktop\Your Sawaal\questions\question-details.html" title="Answer" data-toggle="tooltip" data-placement="right">
-							<i class="fa fa-forumbee"></i>
+						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor">Be a Mentor
+						<i class="ti-user"></i>
 						</a>
 					</li>
-					
+					<li>
+						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee">Find Mentor
+						<i class="ti-user"></i>
+						</a>
+					</li>
+					<% } %>
 					
 					
 				</ul>
