--- a/views/questions.ejs
+++ b/views/questions.ejs
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<title>Your Sawal :: Group</title>
+		<title>Your Sawal :: Questions</title>
 		<link rel="icon" href="app/images/logo.jpg" type="image/png" sizes="16x16"> 
 		
         <link rel="stylesheet" href="/app/css/main.min.css">
@@ -105,20 +105,28 @@
                 <ul class="left-menu">
             
                     <li>
-                        <a href="C:\Users\stack\Desktop\Your Sawaal\questions\questions.html" title="Questions" data-toggle="tooltip" data-placement="right">
-                            <i class="ti-magnet"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="C:\Users\stack\Desktop\Your Sawaal\groups\timeline.html" title="Groups" data-toggle="tooltip" data-placement="right">
-                            <i class="fa fa-users"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="C:\Users\stack\Desktop\Your Sawaal\questions\question-details.html" title="Answer" data-toggle="tooltip" data-placement="right">
-                            <i class="fa fa-forumbee"></i>
-                        </a>
-                    </li>
+						<a href="/" title="Questions" data-toggle="tooltip" data-placement="right">
+							<i class="ti-magnet"></i>
+						</a>
+					</li>
+											
+					<% if(login_id==User_id){ %>
+					<li>
+						<a class="" title="Notifications" data-toggle="tooltip" data-placement="right" href="/user/notifications/<%=User._id%>">Notifications
+						<i class="ti-bell"></i>
+						</a>
+					</li>
+					<li>
+						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor">Be a Mentor
+						<i class="ti-user"></i>
+						</a>
+					</li>
+					<li>
+						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee">Find Mentor
+						<i class="ti-user"></i>
+						</a>
+					</li>
+					<% } %>
                 
                 
                 </ul>
@@ -135,7 +143,7 @@
                     <a role="button" href="/askquestion" class="btn theme-btn theme-btn-sm">Ask Question</a>
                 </div>
                 <div class="d-flex flex-wrap align-items-center justify-content-between">
-                    <p class="pt-1 fs-15 fw-medium lh-20">50 questions</p>
+                    
                    
                 </div>
             </div><!-- end filters -->
