--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Login</title>
+    <style>
+    .gradient-custom-2 {
+/* fallback for old browsers */
+background: #fccb90;
+
+/* Chrome 10-25, Safari 5.1-6 */
+background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+
+/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+}
+
+@media (min-width: 768px) {
+.gradient-form {
+height: 100vh !important;
+}
+}
+@media (min-width: 769px) {
+.gradient-custom-2 {
+border-top-right-radius: .3rem;
+border-bottom-right-radius: .3rem;
+}
+}
+    </style>
 </head>
 
 <body>
@@ -28,22 +52,43 @@
             </div>
             <% } %>
 
-                <div class="container">
+<section class="h-100 gradient-form" style="background-color: #eee;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-xl-10">
+        <div class="card rounded-3 text-black">
+          <div class="row g-0">
+            <div class="col-lg-6">
+              <div class="card-body p-md-5 mx-md-4">
+
+                <div class="text-center">
+                  <img src="/images/logo.jpeg"
+                    style="width: 185px;" alt="logo">
+                  <h4 class="mt-1 mb-5 pb-1">Welcome to Your Sawaal</h4>
+                </div>
+
                     <h3>Login</h3>
                     <form action="/user/login" method="post" class="form-group">
-                        <div class="mb-3">
+                    <p>Please login to your account</p>
+                       <div class="form-outline mb-4">
+                       <input type="email" class="form-control" name="email" id="email"
+                                aria-describedby="emailHelp" placeholder="email address" />
                             <label for="email" class="form-label">Email address</label>
-                            <input type="email" class="form-control" name="email" id="email"
-                                aria-describedby="emailHelp">
+                            
                         </div>
-                        <div class="mb-3">
+                        <div class="form-outline mb-4">
+                        <input type="password" class="form-control" name="password" id="password" />
                             <label for="password" class="form-label">Password</label>
-                            <input type="password" class="form-control" name="password" id="password">
+                           
                         </div>
-                        <button type="submit" class="btn btn-primary">Login</button>
+                        <div class="text-center pt-1 mb-5 pb-1">
+                        <button type="submit" class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3">Login</button>
+                        </div>
                     </form>
-                    <p>Don't have an account? <a href="/user/register">Register</a></p>
-                </div>
+                    <div class="d-flex align-items-center justify-content-center pb-4">
+                    <p class="mb-0 me-2">Don't have an account?</p>
+                    <a href="/user/register">Register</a></p>
+                 </div>
 
                 <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
