--- a/views/login.ejs
+++ b/views/login.ejs
@@ -87,7 +87,7 @@ border-bottom-right-radius: .3rem;
                     </form>
                     <div class="d-flex align-items-center justify-content-center pb-4">
                     <p class="mb-0 me-2">Don't have an account?</p>
-                    <a href="/user/register">Register</a></p>
+                    <a href="/user/register">Register</a>
                  </div>
 
                 <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
