--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,20 @@
     <meta name="google-signin-client_id"
         content="856357969779-qgc8c3elmpkun7m60doeoc4d3rsnpfhr.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  rel="stylesheet"
+/>
+<!-- Google Fonts -->
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
+<!-- MDB -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.3.0/mdb.min.css"
+  rel="stylesheet"
+/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Login</title>
@@ -67,7 +81,7 @@ border-bottom-right-radius: .3rem;
                   <h4 class="mt-1 mb-5 pb-1">Welcome to Your Sawaal</h4>
                 </div>
 
-                    <h3>Login</h3>
+                    
                     <form action="/user/login" method="post" class="form-group">
                     <p>Please login to your account</p>
                        <div class="form-outline mb-4">
@@ -93,6 +107,10 @@ border-bottom-right-radius: .3rem;
                 <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
                     crossorigin="anonymous"></script>
+                    <script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.3.0/mdb.min.js"
+></script>
 
 
 </body>
