--- a/views/ask-question.ejs
+++ b/views/ask-question.ejs
@@ -97,14 +97,13 @@
 							<i class="ti-magnet"></i>
 						</a>
 					</li>
-					
 					<li>
-						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor">Be a Mentor
+						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor"
 						<i class="ti-user"></i>
 						</a>
 					</li>
 					<li>
-						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee">Find Mentor
+						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee"
 						<i class="ti-user"></i>
 						</a>
 					</li>
