--- a/views/notifications.ejs
+++ b/views/notifications.ejs
@@ -197,17 +197,16 @@ input[type="checkbox"]{
 						</a>
 					</li>
 					
-					<li>
-						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor">Be a Mentor
+				<li>
+						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor"
 						<i class="ti-user"></i>
 						</a>
 					</li>
 					<li>
-						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee">Find Mentor
+						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee"
 						<i class="ti-user"></i>
 						</a>
 					</li>
-					
 				</ul>
 			</div>
 			
