--- a/views/user-followers.ejs
+++ b/views/user-followers.ejs
@@ -86,16 +86,15 @@
 					</li>
 					
 					<li>
-						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor">Be a Mentor
+						<a title="Pro - Mentor" data-toggle="tooltip" data-placement="right"class="active" href="/user/mentor"
 						<i class="ti-user"></i>
 						</a>
 					</li>
 					<li>
-						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee">Find Mentor
+						<a title="Pro - Mentee" data-toggle="tooltip" data-placement="right" class="active" href="/user/mentee"
 						<i class="ti-user"></i>
 						</a>
 					</li>
-				
 			
 			
 				
